--- a/client/index.html
+++ b/client/index.html
@@ -1,18 +1,20 @@
 <!doctype html>
 <html>
 <head>
+    <script src="http://code.jquery.com/jquery-1.4.1.min.js"></script>
     <title>Coordination</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <script src="/socket.io/socket.io.js"></script>
-    <script>
+<script>
 
-        var socket = io();
-        socket.on('user connected', function (data) {
-            console.log(data);
-        });
-    </script>
+</script>
+
+
 </head>
 <body>
+<h1>试一下</h1>
+<div>
+    <p>在此输入</p>
 <div id="app"></div>
+</div>
 </body>
 </html>
